# EventLoopForTheEarth

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md  async  async.sh  clean  clean.sh  deps  deps.sh  make  make.sh  run  run-tests  run.sh  script.lua  utils  utils.sh  watch  watch-test.sh  watch-tests  watch.sh
cmake-modules/: FindLuaJIT.cmake  FindOpenSSL.cmake  FindUSockets.cmake
configs/: .env  .gitkeep
src/: AssociativeArray.cpp  AssociativeArray.h  app.cpp  luatest.cpp  tests_header.h
src/event_engine/: EventLoop.cpp  EventLoop.h  IDKParser.cpp  IDKParser.h  Profiler.cpp  Profiler.h  Reactor.cpp  Reactor.h  ThreadGroup.cpp  ThreadGroup.h  action.h  bpromise.h  window.cpp
src/http_server/: readme.md  web.cpp  web.h  web_server.cpp  web_server.h
src/util/: AssociativeArray.h  AssociativeArray.hpp  Files.hpp  IDKParser.hpp  SCFParser.hpp  String.hpp  trim.h
src/util/scf_engine/: keywords.h
tests/: index.cpp  nstr.cpp
tests/units/: nstr.cpp  prophiler.cpp
www/: elfte.scf  elfte.yaml  faceframe.html  ff1.html  home.html  index.html  test.html  test2.html
www_scripts/: bridge.lua  main.lua
www_scripts/controllers/: home.lua
www_scripts/core/: router.lua
